use code symbol

--- a/style/common.sty
+++ b/style/common.sty
@@ -59,7 +59,7 @@
   boxrule=0pt,bottomrule=2pt,toprule=2pt,
   sharp corners,
   drop fuzzy shadow,
-  title=\hspace*{-1em}\code{</>} \quad #3,
+  title=\hspace*{-1em}\faCode \quad #3,
   minted options = {
       #1,
       breaklines=true,
